# sfml-snake

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  Globals.h  SharedContext.h  Snake.cpp  Snake.h  StateGame.cpp  StateGame.h  StateIntro.cpp  StateIntro.h  StateManager.cpp  StateManager.h  StatePause.cpp  StatePause.h  TextBox.cpp  TextBox.h  Window.cpp  World.cpp  World.h
